CRUD for actor working / film

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 	<name>demo3</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+		<!--Sonar -->
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.language>java</sonar.language>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
