--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<!--Sonar -->
+		<!-- Sonar -->
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPaths>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.language>java</sonar.language>
 		<java.version>11</java.version>
 	</properties>
