--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://database01.cgqf4rofavxv.eu-west-2.rds.amazonaws.com:3306/sakila
 spring.datasource.username=admindp
 spring.datasource.password=Bolgatanga1
+server.port=80
